# web-visuals

./: .eslintrc.js  .gitignore  .prettierrc.js  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.ts
engines/: index.ts
engines/fractal/: fractal-engine.js  index.ts
scripts/: dev.sh  start.sh  time_main.sh
src/cli/: mandelbrot.ts
src/engine/: CMakeLists.txt  Toolchain-Emscripten.cmake  cv_tools.cpp  fractal.cpp  fractal.h  main.cpp  main_native.cpp  main_web.cpp  mandelbrot.cpp
src/engine/cmake_modules/: FindOpenCV.cmake
src/wasm/: fractal.ts  index.ts
src/web/: complex.ts  index.html  index.ts  mandelbrot.ts  syscall.ts  wasmRunner.ts
src/web/App/: client.tsx  index.ts  server.tsx
src/web/App/components/: DefaultHead.tsx  Fonts.tsx
src/web/declarations/: global.css.d.ts  global.d.ts  global.jpg.d.ts  global.png.d.ts  global.svg.d.ts
src/web/graphics/: colors.ts  coordinates.ts  mandelbrot.ts
src/web/graphics/cellular/enviroment/: client.ts  index.d.ts
src/web/graphics/cellular/scene/: client.ts  index.d.ts
src/web/graphics/enviromentSimulation/: client.ts  index.d.ts
src/web/graphics/holomorph/: client.ts  index.d.ts  mandelbrot.ts
src/web/models/: index.ts
src/web/pages/: index.ts  route.ts
src/web/pages/CellularPage/: controller.ts  index.ts
src/web/pages/CellularPage/View/: index.css.d.ts  index.tsx
src/web/pages/CellularPage/components/GpuCanvas/: index.tsx
src/web/pages/MandelbrotPage/: controller.ts  index.ts  view.tsx
src/web/pages/MandelbrotPage/View/: index.css  index.tsx
src/web/pages/MandelbrotPage/components/GpuCanvas/: index.tsx
src/web/pages/MandelbrotPage/components/ZoomGpuCanvas/: index.tsx
src/web/resolvers/: index.ts
src/web/server/: assets.ts  config.ts  csp.ts  getPage.ts  index.ts  resolvers.ts  static.ts
src/web/server/template/: index.tsx
src/web/utils/history/: index.tsx
src/web/widget/: index.ts
src/web/widget/createWidget/: client.tsx  index.ts  server.ts
